--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -3,9 +3,9 @@ name: CMake
 on:
   push:
     tags: '*'
-    branches: [ master ]
+    branches: [ master,dev ]
   pull_request:
-    branches: [ master ]
+    branches: [ master,dev ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
