libcurlのビルドオプション変更: Websocketの有効化など

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,10 @@ set(BUILD_CURL_EXE OFF)
 set(BUILD_SHARED_LIBS OFF)
 set(BUILD_STATIC_LIBS ON)
 set(BUILD_STATIC_CURL ON)
+set(BUILD_LIBCURL_DOCS OFF)
 set(CURL_DISABLE_INSTALL OFF)
+set(ENABLE_WEBSOCKETS ON)
+set(ENABLE_CURL_MANUAL OFF)
 
 option(BUILD_SAMPLE "Build Samples" OFF)
 
